@@ -1,4 +1,4 @@
-# $NetBSD: hacks.mk,v 1.7 2012/07/25 13:17:08 obache Exp $
+# $NetBSD: hacks.mk,v 1.8 2012/09/07 11:43:54 adam Exp $
 
 .if !defined(GLIB2_HACKS_MK)
 GLIB2_HACKS_MK=	# defined
@@ -13,14 +13,16 @@ CFLAGS:=	-O0 ${CFLAGS:C/[+,-]O[0-9]?//g}
 
 .if ${OPSYS} == "Darwin"
 CHECK_BUILTIN.libiconv:=	yes
-. include "../../converters/libiconv/builtin.mk"
+.  include "../../converters/libiconv/builtin.mk"
 CHECK_BUILTIN.libiconv:=	no
+.  if !empty(USE_BUILTIN.iconv:M[Yy][Ee][Ss])
 PKG_HACKS+=		darwin-iconv
 SUBST_CLASSES+=		iconv
 SUBST_STAGE.iconv=	pre-configure
 SUBST_MESSAGE.iconv=	Changing libiconv_open to iconv_open.
 SUBST_FILES.iconv=	configure
 SUBST_SED.iconv=	-e 's,libiconv_open,iconv_open,g'
+.  endif
 .endif
 
 # Work around unresolved symbol g_test_config_vars during build
